chore(deps): update plugin org.springframework.boot to v4 (#336)
* chore(deps): update plugin org.springframework.boot to v4

* chore(deps): update plugin org.springframework.boot to v4

* chore(deps): Update Spring Boot to version 4.0.2 and refactor dependencies

* chore(deps): Add missing EC2 classes for enhanced network configuration

---------

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: Branislav Beno <branislav.beno@siemens.com>