@@ -21,7 +21,6 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * Creates a base network for an application served by ECS. The network stack contains a VPC,
@@ -411,8 +410,8 @@ public class Network extends Construct {
                 this.httpsListener != null ? this.httpsListener.getListenerArn() : null,
                 this.loadBalancerSecurityGroup.getSecurityGroupId(),
                 this.ecsCluster.getClusterName(),
-                this.vpc.getIsolatedSubnets().stream().map(ISubnet::getSubnetId).collect(Collectors.toList()),
-                this.vpc.getPublicSubnets().stream().map(ISubnet::getSubnetId).collect(Collectors.toList()),
+                this.vpc.getIsolatedSubnets().stream().map(ISubnet::getSubnetId).toList(),
+                this.vpc.getPublicSubnets().stream().map(ISubnet::getSubnetId).toList(),
                 this.vpc.getAvailabilityZones(),
                 this.loadBalancer.getLoadBalancerArn(),
                 this.loadBalancer.getLoadBalancerDnsName(),
